add profile picture

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Carter Tran</h1>
     <p>I'm a student studying Data Science at the University of California San Diego. This summer I will be interning at Amazon as a Software Development Engineering Intern. My current research lies at the intersection of Transformer models and their applications to real-time seizure detection.</p>
+    <img src="images/profile_picture.png" alt="A headshot of Carter Tran" width="300" height="300">
 </body>
 </html>
