add nav, projects, and contact

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects/index.html">Projects</a></li>
+            <li><a href="contact/index.html">Contact</a></li>
+            <li><a href="https://github.com/CarterT27" target="_blank">GitHub</a></li>
+        </ul>
+    </nav>
     <h1>Carter Tran</h1>
     <p>I'm a student studying Data Science at the University of California San Diego. This summer I will be interning at Amazon as a Software Development Engineering Intern. My current research lies at the intersection of Transformer models and their applications to real-time seizure detection.</p>
     <img src="images/profile_picture.png" alt="A headshot of Carter Tran" width="300" height="300">
