added contact page

--- a/contact/index.html
+++ b/contact/index.html
@@ -15,5 +15,17 @@
         </ul>
     </nav>
     <h1>Contact</h1>
+    <form action="mailto:carter.tran@gmail.com" method="POST" enctype="text/plain">
+        <label>Email:
+            <input name="email" type="email" value="your_email@ucsd.edu">
+        </label>
+        <label>Subject:
+            <input name="subject" value="Contact Form Submission">
+        </label>
+        <label>Body:
+            <textarea name="body">Enter your message here...</textarea>
+        </label>
+        <button>Submit</button>
+    </form>
 </body>
 </html>
