--- a/contact/index.html
+++ b/contact/index.html
@@ -15,7 +15,7 @@
         </ul>
     </nav>
     <h1>Contact</h1>
-    <form action="mailto:carter.tran@gmail.com" method="POST" enctype="text/plain">
+    <form action="mailto:cat017@ucsd.edu" method="POST" enctype="text/plain">
         <label>Email:
             <input name="email" type="email" value="your_email@ucsd.edu">
         </label>
