--- a/projects/index.html
+++ b/projects/index.html
@@ -10,10 +10,16 @@
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="index.html">Projects</a></li>
+            <li><a href="../resume/index.html">Resume</a></li>
             <li><a href="../contact/index.html">Contact</a></li>
             <li><a href="https://github.com/CarterT27" target="_blank">GitHub</a></li>
         </ul>
     </nav>
     <h1>Projects</h1>
+    <ul>
+        <li>
+            <h2>Under Construction</h2>
+        </li>
+    </ul>
 </body>
 </html>
