--- a/projects/index.html
+++ b/projects/index.html
@@ -18,7 +18,13 @@
     <h1>Projects</h1>
     <ul>
         <li>
-            <h2>Under Construction</h2>
+            <h2>Algorithmic Trading Bot</h2>
+        </li>
+        <li>
+            <h2>Tennis Match Prediction</h2>
+        </li>
+        <li>
+            <h2>txtTutor</h2>
         </li>
     </ul>
 </body>
